[gd_scene load_steps=2 format=3 uid="uid://bm31gemem22uc"]

[ext_resource type="Script" uid="uid://bv0hffvudv51d" path="res://addons/curved_lines_2d/assign_stroke_inspector_form.gd" id="1_j8wjx"]

[node name="AssignStrokeInspectorForm" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8wjx")

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will create a new Line2D node and assign it to the line property of this ScalableVectorScape2D."
mouse_filter = 0
text = "Add Line2D Stroke *"

[node name="CreateStrokeButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "This will create a new Line2D node and assign it to the line property of this ScalableVectorScape2D."
text = "Add Line2D Stroke"

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonContainer"]
layout_mode = 2

[node name="ButtonContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer3"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will create a new Polygon2D node and assign it to the poly_stroke property of this ScalableVectorScape2D."
mouse_filter = 0
text = "Add Polygon2D Stroke *"

[node name="CreatePolyStrokeButton" type="Button" parent="ButtonContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "This will create a new Polygon2D node and assign it to the poly_stroke property of this ScalableVectorScape2D."
text = "Add  Polygon2D Stroke"

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonContainer3"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ButtonContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Click on this button to select the Line2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot, like gradients, width curvature, and repeating textures."
mouse_filter = 0
text = "Edit Line2D *"

[node name="GotoLine2DButton" type="Button" parent="ButtonContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "Click on this button to select the Line2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot, like gradients, width curvature, and repeating textures."
text = "Edit Line2D"

[node name="ButtonContainer4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer4"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Click on this button to select the Polygon2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot, like image textures."
mouse_filter = 0
text = "Edit Polygon2D *"

[node name="GotoPolygon2DButton" type="Button" parent="ButtonContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "Click on this button to select the Polygon2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot, like image textures."
text = "Edit Polygon2D"

[connection signal="pressed" from="ButtonContainer/CreateStrokeButton" to="." method="_on_create_stroke_button_pressed"]
[connection signal="pressed" from="ButtonContainer3/CreatePolyStrokeButton" to="." method="_on_create_poly_stroke_button_pressed"]
[connection signal="pressed" from="ButtonContainer2/GotoLine2DButton" to="." method="_on_goto_line_2d_button_pressed"]
[connection signal="pressed" from="ButtonContainer4/GotoPolygon2DButton" to="." method="_on_goto_polygon_2d_button_pressed"]
